# gpt-chatbots

./: .gitignore  LICENSE  README.md  pyproject.toml
gpt_chatbots/: app.py  chat_bot.py
locale/: base.pot
locale/en_US/LC_MESSAGES/: messages.mo  messages.po
locale/es_ES/LC_MESSAGES/: messages.mo  messages.po
